--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,3 +1,5 @@
+source /usr/local/lib/python3.5/dist-packages/powerline/bindings/tmux/powerline.conf
+
 set -g mouse on
 
 bind-key X kill-window
@@ -11,4 +13,15 @@ bind-key -Tcopy-mode-vi 'v' send -X begin-selection
 bind-key -Tcopy-mode-vi 'y' send -X copy-selection
 
 set-option -sg escape-time 10
+
+# Change colours to something that matches powerline a bit
+set -g pane-border-fg colour24
+set -g pane-active-border-fg colour24
+# vim keys
+bind-key j select-pane -D
+bind-key k select-pane -U
+bind-key h select-pane -L
+bind-key l select-pane -R
+
+bind-key -T copy-mode-vi y send-keys -X copy-pipe-and-cancel "xclip -selection clipboard"
 
