--- a/Dockerfile.dev
+++ b/Dockerfile.dev
@@ -30,12 +30,18 @@ RUN sudo apt-get update && \
 	sudo apt-get install -y build-essential && \
 	sudo apt-get install -y cmake && \
 	sudo apt-get install -y curl && \
-	sudo apt-get install -y git && \
 	sudo apt-get install -y openssh-client && \
 	sudo apt-get install -y man-db && \
 	sudo apt-get install -y bash-completion && \
 	sudo apt-get install -y software-properties-common && \
 	sudo apt-get install --no-install-recommends -y language-pack-en-base
+
+# git
+RUN sudo apt-get install --no-install-recommends -y software-properties-common && \
+	sudo apt-add-repository ppa:git-core/ppa && \
+	sudo apt-get update && \
+	sudo apt-get install --no-install-recommends -y git && \
+	sudo apt-get purge -y software-properties-common
 
 ENV LC_ALL="en_US.UTF-8"
 ENV LANG="en_US.UTF-8"
@@ -77,7 +83,7 @@ RUN . "$NVM_DIR/nvm.sh" && nvm install node && nvm alias default stable
 # rust nightly
 # Install openssl/pkgconf to compile against for reqwest and Iron.
 RUN sudo apt-get update && \
-	sudo apt-get install pkgconf libssl-dev --no-install-recommends -y && \
+	sudo apt-get install pkgconf libssl-dev libasound2-dev libx11-xcb-dev --no-install-recommends -y && \
 	curl https://sh.rustup.rs -sSf | sh -s -- -y --default-toolchain nightly
 
 ENV RUST_DEFAULT_TOOLCHAIN='nightly'
@@ -87,6 +93,9 @@ RUN git clone https://github.com/ticki/dybuk.git && \
 	cargo install cargo-watch && \
 	rustup component add rust-src --toolchain nightly && \
 	cargo install --path dybuk && \
+# RUST WASM support
+	curl https://rustwasm.github.io/wasm-pack/installer/init.sh -sSf | sh && \
+	cargo install cargo-generate && \
 	rm -rf dybuk
 
 # python
@@ -106,10 +115,12 @@ RUN sudo pip3 install powerline-status && \
 RUN sudo pip3 install pgcli
 
 # nvim
-RUN sudo add-apt-repository ppa:neovim-ppa/unstable && \
+RUN sudo apt-get install --no-install-recommends -y software-properties-common && \
+	sudo apt-add-repository ppa:neovim-ppa/unstable && \
 	sudo apt-get update && \
 	sudo apt-get install neovim -y && \
-	mkdir -p "$HOME/.config/nvim"
+	mkdir -p "$HOME/.config/nvim" && \
+	sudo apt-get purge -y software-properties-common
 
 ENV EDITOR nvim
 # nvim plugins
@@ -136,11 +147,7 @@ RUN sudo pip3 install docker-compose && \
 	sudo groupadd -g 999 docker && \
 	sudo usermod -aG docker "$DOCKER_USER"
 
-RUN sudo cat /tmp/.bashrc >> "$HOME/.bashrc" && \
-# clean up
-	sudo apt-get autoremove -y && \
-	sudo apt-get clean && \
-	sudo rm -rf /var/lib/apt/lists/*
+RUN sudo cat /tmp/.bashrc >> "$HOME/.bashrc"
 
 CMD ["tmux", "new"]
 
