--- a/Dockerfile.dev
+++ b/Dockerfile.dev
@@ -98,8 +98,16 @@ RUN git clone https://github.com/ticki/dybuk.git && \
 	cargo install cargo-generate && \
 	rm -rf dybuk
 
+# Java
+RUN sudo apt-get update && \
+	DEBIAN_FRONTEND=noninteractive && \
+	sudo apt-get -y install openjdk-9-jdk-headless && \
+	sudo apt-get clean && \
+	sudo rm -rf /var/lib/apt/lists/*
+
 # python
-RUN sudo apt-get install -y python3-pip && \
+RUN sudo apt-get update && \
+	sudo apt-get install -y python3-pip && \
 	sudo pip3 install --upgrade pip && \
 	sudo pip3 install flake8 jedi virtualenv ptpython neovim && \
 	sudo apt-get update && \
