--- a/Dockerfile.dev
+++ b/Dockerfile.dev
@@ -1,10 +1,17 @@
-ARG UBUNTU_RELEASE=xenial
+ARG UBUNTU_RELEASE=bionic
 
 FROM ubuntu:${UBUNTU_RELEASE}
 
-RUN apt-get update && apt-get install -y sudo
+LABEL MAINTAINER hardy613@gmail.com
+
+ARG UBUNTU_RELEASE
+
+ENV UBUNTU_RELEASE=${UBUNTU_RELEASE}
 
 ENV DOCKER_USER sly613
+
+RUN apt-get update && \
+	apt-get install -y apt-utils sudo
 
 # remove sudo password
 RUN adduser --disabled-password --gecos '' "$DOCKER_USER" && \
@@ -23,7 +30,7 @@ USER "$DOCKER_USER"
 
 ENV HOME "/home/$USER"
 
-WORKDIR "$HOME"
+WORKDIR "$HOME/code"
 
 # tools
 RUN sudo apt-get update && \
@@ -60,7 +67,7 @@ RUN tar -xzf "$TMUX_TAR" -C /tmp
 
 WORKDIR "/tmp/tmux-$TMUX_VERSION"
 
-RUN sudo apt-get install -y libevent-2.0-5 libevent-dev libncurses-dev && \
+RUN sudo apt-get install -y libevent-2.1-6 libevent-dev libncurses-dev && \
 	./configure && \
 	make && \
 	sudo make install
@@ -78,7 +85,9 @@ RUN curl -o- https://raw.githubusercontent.com/creationix/nvm/v0.33.11/install.s
 
 ENV NVM_DIR $HOME/.nvm
 
-RUN . "$NVM_DIR/nvm.sh" && nvm install node && nvm alias default stable
+RUN . "$NVM_DIR/nvm.sh" && \
+	nvm install --lts && \
+	nvm alias default stable
 
 # rust nightly
 # Install openssl/pkgconf to compile against for reqwest and Iron.
@@ -88,20 +97,17 @@ RUN sudo apt-get update && \
 
 ENV RUST_DEFAULT_TOOLCHAIN='nightly'
 
-RUN git clone https://github.com/ticki/dybuk.git && \
-	. $HOME/.cargo/env && \
+RUN . $HOME/.cargo/env && \
 	cargo install cargo-watch && \
 	rustup component add rust-src --toolchain nightly && \
-	cargo install --path dybuk && \
 # RUST WASM support
 	curl https://rustwasm.github.io/wasm-pack/installer/init.sh -sSf | sh && \
-	cargo install cargo-generate && \
-	rm -rf dybuk
+	cargo install cargo-generate
 
 # Java
 RUN sudo apt-get update && \
 	DEBIAN_FRONTEND=noninteractive && \
-	sudo apt-get -y install openjdk-9-jdk-headless && \
+	sudo apt-get -y install openjdk-11-jdk-headless && \
 	sudo apt-get clean && \
 	sudo rm -rf /var/lib/apt/lists/*
 
@@ -109,18 +115,13 @@ RUN sudo apt-get update && \
 RUN sudo apt-get update && \
 	sudo apt-get install -y python3-pip && \
 	sudo pip3 install --upgrade pip && \
-	sudo pip3 install flake8 jedi virtualenv ptpython neovim && \
-	sudo apt-get update && \
-	sudo apt-get install -y --no-install-recommends python3-dev
+	sudo pip3 install flake8 jedi virtualenv ptpython neovim pipenv poetry && \
+	sudo apt-get install -y --no-install-recommends python3-dev python3-venv
 
 # Power TMUX, doing this here cause we need pip
-RUN sudo pip3 install powerline-status && \
-	sudo pip3 install powerline-gitstatus && \
-# xclip
-	sudo apt-get install -y xclip
-
-# pgcli
-RUN sudo pip3 install pgcli
+RUN sudo pip3 install powerline-status powerline-gitstatus && \
+# xclip pgcli
+	sudo apt-get install -y xclip pgcli
 
 # nvim
 RUN sudo apt-get install --no-install-recommends -y software-properties-common && \
@@ -131,21 +132,20 @@ RUN sudo apt-get install --no-install-recommends -y software-properties-common &
 	sudo apt-get purge -y software-properties-common
 
 ENV EDITOR nvim
+
 # nvim plugins
 COPY ./init.vim "$HOME/.config/nvim/init.vim"
 
-RUN sudo chown "$USER:$USER" "$HOME/.config/nvim/init.vim" && \
-	curl -fLo ~/.local/share/nvim/site/autoload/plug.vim --create-dirs \
-	https://raw.githubusercontent.com/junegunn/vim-plug/master/plug.vim && \
-	nvim +PlugInstall +qall && \
-# youCompleteMe
-	. "$NVM_DIR/nvm.sh" && \
-	. "$HOME/.cargo/env" && \
-	python3 ~/.config/nvim/plugged/YouCompleteMe/install.py \
-	--js-completer --rust-completer
+#RUN sudo chown "$USER:$USER" "$HOME/.config/nvim/init.vim" && \
+#	curl -fLo ~/.local/share/nvim/site/autoload/plug.vim --create-dirs \
+#	https://raw.githubusercontent.com/junegunn/vim-plug/master/plug.vim && \
+#	nvim +PlugInstall +qall && \
+#	. "$NVM_DIR/nvm.sh" && \
+#	. "$HOME/.cargo/env" && \
+#	python3 "$HOME/.config/nvim/plugged/YouCompleteMe/install.py" --racer-completer --ts-completer
 
-# enable tern support
-RUN echo '{"plugins": {"node": {}}}' > ~/.tern-config
+RUN . "$NVM_DIR/nvm.sh" && \
+	npm install typescript -g
 
 # .bashrc alias
 COPY ./.bashrc /tmp/.bashrc
