--- a/Dockerfile.dev
+++ b/Dockerfile.dev
@@ -30,6 +30,8 @@ USER "$DOCKER_USER"
 
 ENV HOME "/home/$USER"
 
+WORKDIR "$HOME"
+
 # tools
 RUN sudo apt-get update && \
 	sudo apt-get install -y build-essential && \
