--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,4 +1,4 @@
-source /usr/local/lib/python3.6/dist-packages/powerline/bindings/tmux/powerline.conf
+source /usr/local/lib/python3.*/dist-packages/powerline/bindings/tmux/powerline.conf
 
 set -g mouse on
 
